# Quantora-explorer

./: .env.example  .eslintrc.json  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .replit  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCS_API_REFERENCE.md  DOCS_DEPLOY_PROD.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  SECURITY_REVIEW.md  count_lines.sh  create_ai_audit_trails.sql  create_ai_model_registry.sql  create_ai_prediction_audit_logs.sql  create_contract_alert_triggers.sql  create_dapp_contract_versions.sql  create_dapp_crash_reports.sql  create_dapp_engagement_metrics.sql  create_dapp_feature_rollouts.sql  create_dapp_interaction_logs.sql  create_dapp_invocation_logs.sql  create_dapp_registry.sql  create_dapp_usage_analytics.sql  create_dapp_usage_events.sql  create_dapp_usage_stats.sql  create_nft_asset_rarity_index.sql  create_nft_burn_events.sql  create_nft_collection_metadata.sql  create_nft_collections.sql  create_nft_market_activity.sql  create_nft_metadata_history.sql  create_nft_minting_events.sql  (+25 more)
.github/: PULL_REQUEST_TEMPLATE.md
ai_verification/: ai_oracle.rs  mod.rs
analytics/: address_clustering.py.quarantine.backup  contract_verification.py
api/: openapi.yaml
attached_assets/: Pasted--Major-Issues-to-Fix-Let-s-go-through-them-clearly-one-by-one-BlockHeader-missing-You-re-tryi-1752100789469_1752100789470.txt  Pasted-1-Missing-or-incorrect-modules-and-imports-Errors-like-arduino-Copy-Edit-unresolved-import-crate-1752100033520_1752100033521.txt  Pasted-Absolutely-YES-we-can-build-a-hybrid-consensus-execution-architecture-that-mixes-PoS-DPoS-D-1752101871403_1752101871403.txt  Pasted-iling-anyhow-v1-0-98-Compiling-spin-v0-9-8-Compiling-headers-v0-3-9-Compiling-hyper-v0-1-1752103198106_1752103198107.txt  Pasted-mpiling-getrandom-v0-2-16-Compiling-httparse-v1-10-1-Compiling-memchr-v2-7-5-Compiling-s-1752105726617_1752105726618.txt  (+3 more)
backend/: app.ts  passport.ts
blockchain/: README.md
blockchain-node/: Cargo.toml
blockchain-node/src/: advanced_defi.rs.quarantine.backup  advanced_vm.rs.quarantine.backup  api.rs  blockchain.rs  consensus.rs  genesis.rs  health.rs  main.rs  mempool.rs  network.rs  transaction.rs  wallet.rs  wallet_api.rs  web_server.rs
blockchain-node/src/blockchain/: transaction.rs
blockchain-node/src/consensus/: hybrid.rs  mod.rs  pos.rs  pow.rs  tests.rs
blockchain-node/src/genesis/: tests.rs
blockchain-node/src/mempool/: mod.rs  tests.rs
blockchain-node/src/network/: mod.rs  tests.rs
blockchain-node/src/state/: mod.rs  tests.rs
blockchain-node/static/: api-docs.html.quarantine.backup
blockchain-node/tests/: state_bench.rs
blockchain/api/: .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
blockchain/api/src/: auth.rs  config.rs  db.rs  errors.rs  guards.rs  lib.rs  main.rs  middleware.rs  routes.rs  wallet.rs
blockchain/api/src/auth/: jwt.rs  mod.rs  password.rs
blockchain/api/src/handlers/: auth.rs.quarantine.backup  user.rs
blockchain/api/src/models/: user.rs
blockchain/api/src/routes/: auth_routes.rs  mod.rs  user_routes.rs
blockchain/api/tests/: integration_test.rs
blockchain/core/: Cargo.toml  schema.sql
blockchain/core/src/: api.rs  auth.rs  block.rs  config.rs  consensus.rs  contract.rs  db.rs  error.rs  event.rs  lib.rs  mempool.rs  models.rs  network.rs  state.rs  storage.rs  transaction.rs  tx.rs  validator.rs  wallet.rs  ws.rs
blockchain/core/src/contract_engine/: mod.rs
blockchain/core/src/models/: mod.rs
common/: Cargo.toml
contracts/: MyContract.sol
exchange/: Cargo.toml  Dockerfile  asset_registry.rs  exchange_api.rs  lend_stake.rs  quantora_wallet.rs  schema.sql  swap_engine.rs  wallet.rs
exchange/backend/src/: app.module.ts
exchange/backend/src/audit/: audit.entity.ts  audit.service.ts
exchange/backend/src/auth/: auth.controller.ts  auth.service.ts  jwt.strategy.ts
exchange/backend/src/common/: error.interceptor.ts
exchange/backend/src/kyc/: kyc.controller.ts
exchange/backend/src/order/: order.controller.ts  order.module.ts  order.service.ts
exchange/backend/src/rate-limit/: rate-limit.module.ts
exchange/backend/src/trade/: trade.service.ts
exchange/backend/src/user/: user.controller.ts  user.module.ts  user.service.ts
exchange/backend/src/wallet/: wallet.controller.ts  wallet.module.ts  wallet.service.ts
exchange/frontend/lib/: api.ts
exchange/frontend/pages/: history.tsx  index.tsx  send.tsx  trade.tsx  wallet.tsx
exchange/mobile/: App.js  index.js  metro.config.js  package.json
exchange/mobile/src/api/: trade.js
exchange/mobile/src/screens/: MarketsScreen.js  OrdersScreen.js  TradeScreen.js
exchange/mobile/temp-app/: package.json
exchange/src/: account_freeze.rs  admin.rs  api.rs  api_abuse.rs  api_deposit_withdraw.rs  api_rate_limit.rs  auth.rs  blockchain_integration.rs  cold_wallet.rs  compliance.rs  db.rs  error.rs  fiat_integration.rs  gdpr.rs  health.rs  kyc_aml.rs  lib.rs  loyalty.ts  main.rs  matching_engine.rs  models.rs  staking.rs  user_auth.rs  withdrawal_control.rs  ws.rs
exchange/src/multitenant/: branding.ts
exchange/src/routes/: rewards.ts
exchange/tests/: fiat_integration_tests.rs  integration_tests.rs  kyc_aml_tests.rs  matching_engine_tests.rs  security_tests.rs  user_auth_tests.rs  ws_tests.rs
indexer/: Cargo.toml  Dockerfile  schema.sql
indexer/migrations/: 20240614_create_blockchain_explorer_schema.sql
indexer/src/: api.rs  db.rs  error.rs  graphql.rs  indexer.rs  lib.rs  main.rs  models.rs  server.rs  subquery.rs  sync.rs
indexer/tests/: integration.rs  stats.rs
quantora/: Cargo.toml  api.rs  fees.rs  main.rs  mod.rs  transfer.rs
quantora-chain/blockchain-node/: Cargo.toml  README.md  genesis.json
quantora-chain/blockchain-node/src/: bench.rs  consensus.rs  main.rs  network.rs  rpc.rs  runtime.rs  storage.rs
quantora-chain/blockchain-node/src/modules/: ai.rs  bridge.rs  governance.rs  mining.rs  nft.rs  quantorax.rs  staking.rs
quantora-chain/blockchain-node/src/tests/: mod.rs
quantora-chain/blockchain-node/src/tokens/: qtx.rs
(+974 files in other folders)
