[package]
name = "blockchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
thiserror = "1"
[package]
name = "blockchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bip39 = "2.0"
secp256k1 = { version = "0.27", features = ["rand-std"] }
warp = "0.3"
