[package]
name = "blockchain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
bip39 = "2.0"
secp256k1 = "0.27"
hex = "0.4"
rand = "0.8"
rayon = "1.5"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
env_logger = "0.10"
tracing = "0.1"