[package]
name = "exchange"
version = "0.1.0"
edition = "2021"
authors = ["INKOSIKING <your@email.com>"]
description = "Quantora exchange backend"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
utoipa = "4"
utoipa-swagger-ui = "5"
prometheus = "0.14"
actix-web-prom = "0.7"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
validator = { version = "0.20.0", features = ["derive"] }
