[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
authors = ["INKOSIKING <your@email.com>"]
description = "Quantora blockchain indexer"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2.0.12"
anyhow = "1.0.98"
reqwest = "0.12.20"
log = "0.4.27"
validator = { version = "0.20.0", features = ["derive"] }
rayon = "1.10.0"
