[package]
name = "quantora"
version = "0.1.0"
authors = ["Your Name <your@email.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Quantora blockchain core module"
repository = "https://github.com/yourname/Quantora"
categories = ["blockchain", "core"]
keywords = ["quantora", "blockchain", "core"]
readme = "README.md"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[features]
default = []
