[package]
name = "blockchain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-service = "2"
actix-cors = "0.6"
actix-web-httpauth = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = "5"
env_logger = "0.11"
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
sqlx-cli = { version = "0.8", features = ["postgres"] }
