[package]
name = "blockchain-core"
version = "0.1.0"
edition = "2021"
authors = ["INKOSIKING <your@email.com>"]
description = "Core logic for Quantora blockchain"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tracing = "0.1"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
actix-web = "4"
base64 = "0.22"
anyhow = "1.0"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
log = "0.4.27"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
ed25519-dalek = "2.1.1"
