[package]
name = "quantora-chain-node"
version = "1.0.0"
edition = "2021"

[dependencies]
frame-support = { version = "4.0.0" }
frame-system = { version = "4.0.0" }
sp-runtime = { version = "4.0.0" }
sp-io = { version = "4.0.0" }
pallet-balances = { version = "4.0.0" }
# ... other pallets and utilities